# ai-hedge-fund

./: .gitignore  README.md  pyproject.toml
app/: README.md  run.bat  run.sh
app/backend/: README.md
docker/: .dockerignore  Dockerfile
